[workspace]
members = [
  "01-calorie-counting",
  "02-rock-paper-scissors",
  "03-rucksack-reorganization",
  "04-camp-cleanup",
  "05-supply-stacks",
  "06-tuning-trouble",
  "07-no-space-left-on-device",
  "08-treetop-tree-house",
  "09-rope-bridge",
  "10-cathode-ray-tube",
  "11-monkey-in-the-middle",
  "12-hill-climbing-algorithm",
  "13-distress-signal",
]
